# scrapy-folder-tree

./: .gitignore  .pre-commit-config.yaml  .readthedocs  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml
.woodpecker/: build-docs.yaml  checkout-code.yaml  test.yaml
contributing/: index.html
dev-notes/: index.html
docs/: conf.py  contributing.md  contributing.rst  dev-notes.md  dev-notes.rst  folder-structures.md  folder-structures.rst  index.md  index.rst  installation.md  installation.rst  requirements.txt  usage.md  usage.rst
docs/_templates/: base.html  layout.html
docs/folder-structures/: crawling-date.md  crawling-time.md  filename.md
docs/overrides/: main.html
folder-structures/: index.html
folder-structures/crawling-date/: index.html
folder-structures/crawling-time/: index.html
folder-structures/filename/: index.html
installation/: index.html
overrides/: main.html
search/: search_index.json
src/: config.py  pipelines.py
src/scrapy_files_hierarchy/hierarchies/: __init__.py  date.py  hash.py
src/scrapy_folder_tree/: __init__.py  config.py  pipelines.py
src/scrapy_folder_tree/trees/: __init__.py  date.py  hash.py
tests/: test_pipelines.py  test_trees.py
tests/functional/: test_image_pipelines.py
usage/: index.html
