[tool.poetry]
name = "scrapy-files-hierarchy"
version = "0.1.0"
description = "A scrapy pipeline which saves files using hierarchy."
authors = ["Panagiotis Simakis"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Scrapy = "^2.5.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
mypy = "^0.931"
isort = "^5.10.1"
mkdocs = "^1.2.3"
mkdocs-material = "^8.1.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
