[tool.poetry]
name = "scrapy-files-hierarchy"
version = "0.1.2"
description = "A scrapy pipeline which stores files using folder hierarchy."
authors = ["Panagiotis Simakis"]
license = "MIT"
maintainers = ["Panagiotis Simakis"]
readme = "README.md"
repository = "https://github.com/sp1thas/scrapy-files-hierarchy"
keywords = ["scrapy", "scrapy-files-structure", "scrapy-folder-hierarchy", "folder-hierarchy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Natural Language :: English",
    "Natural Language :: Greek"
]
packages = [{ include = "scrapy_files_hierarchy", from = "src" }]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sp1thas/scrapy-files-hierarchy/issues"

[tool.poetry.dependencies]
python = "^3.7"
Scrapy = "^2.5.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
mypy = "^0.931"
isort = "^5.10.1"
mkdocs = "^1.2.3"
mkdocs-material = "^8.1.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
